grafana/observability-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: observability
  name: observability-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing   # PUBLIC
    # alb.ingress.kubernetes.io/scheme: internal  # internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: observability-stack-grafana
              port:
                number: 80
